--- a/index.html
+++ b/index.html
@@ -2,28 +2,105 @@
 <html>
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="vendor/normalize.css">
-  <link rel="stylesheet" href="vendor/boilerplate.css">
-  <link rel="stylesheet" href="vendor/bootstrap-3.css">
-  <link rel="stylesheet" href="vendor/bootstrap-theme-3.css">
-  <link rel="stylesheet" href="vendor/jquery.mobile-1.4.2.css">
-
+  <title>SPA</title>
+  <!-- <link rel="stylesheet" href="vendor/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="vendor/boilerplate.css"> -->
+  <!-- <link rel="stylesheet" href="vendor/bootstrap-3.css"> -->
+  <!-- <link rel="stylesheet" href="vendor/bootstrap-theme-3.css"> -->
+  <!-- <link rel="stylesheet" href="vendor/jquery.mobile-1.4.2.css"> -->
   <link rel="stylesheet" href="css/compiled.css">
+  <link rel="stylesheet" href="css/spa.css">
+  <link rel="stylesheet" href="css/spa.shell.css">
 
+<style type="text/css">
+		/*body {
+			width : 100%;
+			height : 100%;
+			overflow : hidden;
+			background-color : #777;
+		}
+		#spa {
+			position : absolute;
+			top : 8px;
+			left : 8px;
+			bottom : 8px;
+			right : 8px;
+			border-radius : 8px 8px 0 8px;
+			background-color : #fff;
+		}
+		.spa-slider {
+			position : absolute;
+			bottom : 0;
+			right : 2px;
+			width : 300px;
+			height : 16px;
+			cursor : pointer;
+			border-radius : 8px 0 0 0;
+			background-color : #f00;
+    }*/
+</style>
+<script src="vendor/jquery-1.11.js"></script>
+<script src="vendor/jquery.uriAnchor.js"></script>
+<script src="js/spa.js"></script>
+<script src="js/spa.shell.js"></script>
+
+<script type="text/javascript">
+  // Module /spa/
+  var xxxspa = (function($) {
+    var configMap = {
+  	      	        extended_height: 434,
+  	      	        extended_title: 'Click to retract',
+  	      	        retracted_height: 16,
+  	      	        retracted_title: 'Click to expand',
+  	      	        template_html: '<div class="spa-slider"><\/div>'
+ 	      	    },
+    $chatSlider,
+    toggleSlider, onClickSlider, initModule;
+
+    toggleSlider = function() {
+				var slider_height = $chatSlider.height();
+				if ( slider_height === configMap.retracted_height) {
+					$chatSlider
+					  .animate({height: configMap.extended_height})
+					  .attr('title', configMap.extended_title);
+					  return true;
+				}
+				else if ( slider_height === configMap.extended_height) {
+					$chatSlider
+					  .animate({height: configMap.retracted_height})
+					  .attr('title', configMap.retracted_title);
+					  return true;
+				}
+				return false;  //don't take action if slider is in transition
+    };
+
+    onClickSlider = function(event){
+    	    toggleSlider();
+    	    return false;
+    };
+
+    initModule = function($container){
+    	    $container.html(configMap.template_html);
+    	    $chatSlider = $container.find('.spa-slider');
+    	    $chatSlider
+    	        .attr('title', configMap.retracted_title)
+    	        .click(onClickSlider);
+    	    return true;
+	  };
+	  return {initModule: initModule};
+}(jQuery));
+</script>
+
+<script>
+	$(document).ready(function(){
+    spa.initModule($('#spa'));
+})
+</script>
 </head>
 <body>
 
- <p>Custom Boilerplate</p>
+<div id="spa"></div>
 
-
-
-<script src="vendor/jquery-1.11.js"></script>
-<!-- <script src="vendor/jquery.mobile-1.4.2.js"></script> -->
-<!-- <script src="combined.js"></script> -->
-<script src="src/coffee.js"</script>
-<script src="src/script.js"</script>
 <script>document.write('<script src="http://'+(location.host || 'localhost').split(':')[0]+':35729/livereload.js?snipver=1"></'+'script>')</script>
-
 </body>
 </html>
