finish up to 5.3.1

--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SPA</title>
-  <!-- <link rel="stylesheet" href="vendor/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="vendor/boilerplate.css"> -->
-  <!-- <link rel="stylesheet" href="vendor/bootstrap-3.css"> -->
-  <!-- <link rel="stylesheet" href="vendor/bootstrap-theme-3.css"> -->
-  <!-- <link rel="stylesheet" href="vendor/jquery.mobile-1.4.2.css"> -->
   <!-- <link rel="stylesheet" href="css/compiled.css"> -->
   <link rel="stylesheet" href="css/spa.css"       type="text/css"/>
-  <link rel="stylesheet" href="css/spa.chat.css"  type="text/css"/>
   <link rel="stylesheet" href="css/spa.shell.css" type="text/css"/>
+  <link rel="stylesheet" href="css/spa.chat.css"  type="text/css"/>
+  <link rel="stylesheet" href="css/spa.avtr.css"  type="text/css"/>
 
+<script src="vendor/taffydb-2.6.2.js"></script>
 <script src="vendor/jquery-1.11.js"></script>
 <script src="vendor/jquery.uriAnchor.js"></script>
+<script src="vendor/jquery.event.gevent-0.1.9.js"></script>
+<script src="vendor/jquery.event.ue-0.3.2.js"></script>
+
 
 <script src="js/spa.js"      ></script>
 <script src="js/spa.util.js" ></script>
+<script src="js/spa.data.js" ></script>
+<script src="js/spa.fake.js" ></script>
 <script src="js/spa.model.js"></script>
+<script src="js/spa.util_b.js"></script>
 <script src="js/spa.shell.js"></script>
 <script src="js/spa.chat.js" ></script>
+<script src="js/spa.avtr.js" ></script>
+
 <script>
   $(document).ready(function(){
     	spa.initModule( $('#spa') );
